RENAMED : style.css : recipe-calories to lucida-bold since it's being used in more than one place EDITED: overflow : hidden to overflow : auto for .foodcart. EDITED: foodcart will now have it's height/maxheight set to the max of .primary and .secondary. FIXED: fetching menus... will be displayed when the server's initially searching for menus. FIXED: the game is reset when chance-game page is navigated away from( hidden ) to support returning main menu.

--- a/interfaces/customer/css/style.css
+++ b/interfaces/customer/css/style.css
@@ -26,7 +26,7 @@
     box-sizing: border-box;
 }
 .foodcart {
-    width : 17%;
+    width : 19%;
     min-height: 100px;
     display: inline;
     float : right;
@@ -35,7 +35,7 @@
     border-radius: 5px;
     border-color: black;
     clear : none;
-    /*overflow: hidden;*/
+    overflow: auto;
 }
 
 #advertisment-space {
@@ -260,7 +260,7 @@
 .homepagebanner {
     text-align: center;
 }
-.recipe-calories {
+.lucida-bold {
     font-weight : bold;
     font-family: "Lucida Console", Monaco, monospace;
 }
